# docs/swagger.json
@@ -443,6 +443,46 @@
                     }
                 }
             }
+        },
+        "/users/profile": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get user profile",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get user profile",
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "schema": {
+                            "$ref": "#/definitions/docs.GetUserWalletResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -498,6 +538,19 @@
                             "items": {
                                 "$ref": "#/definitions/mpc_internal_domain.Transaction"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "docs.GetUserWalletResponse": {
+            "type": "object",
+            "properties": {
+                "payload": {
+                    "type": "object",
+                    "properties": {
+                        "user": {
+                            "$ref": "#/definitions/mpc_internal_domain.UserWithWallet"
                         }
                     }
                 }
@@ -770,6 +823,23 @@
                     "type": "string"
                 },
                 "walletID": {
+                    "type": "string"
+                }
+            }
+        },
+        "mpc_internal_domain.UserWithWallet": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "string"
+                },
+                "walletAddress": {
+                    "type": "string"
+                },
+                "walletId": {
                     "type": "string"
                 }
             }
